examples/test/testpolicy10486.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10486
  namespace: namespace212
spec:
  podSelector:
    matchLabels:
      key7: value36
      key46: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value43
          key15: value35
          key46: value44
      podSelector:
        matchLabels:
          key16: value32
          key14: value9
          key46: value13
